unpackaged/main/default/objects/Top_Spec__c/Top_Spec__c.object-meta.xml
<CustomObject>
    <description>Contains EMEA Top Spec information</description>
    <label>Top Spec</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Top Spec ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Top Specs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>