unpackaged/main/default/objects/Top_Spec__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <inlineHelpText>The Organisers Name</inlineHelpText>
    <label>Organiser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>