unpackaged/main/default/objects/Top_Spec__c/fields/Additional_Breakdown_information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Breakdown_information__c</fullName>
    <inlineHelpText>Please enter any additional breakdown information here</inlineHelpText>
    <label>Additional Breakdown information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>