unpackaged/main/default/objects/Top_Spec__c/fields/Additional_External_Contact_information__c.field-meta.xml
<CustomField>
    <fullName>Additional_External_Contact_information__c</fullName>
    <inlineHelpText>Please enter any additional external contact information here</inlineHelpText>
    <label>Additional External Contact information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>