unpackaged/main/default/objects/Top_Spec__c/fields/Additional_Health_and_Safety_information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Health_and_Safety_information__c</fullName>
    <inlineHelpText>Please enter any additional health and safety information here</inlineHelpText>
    <label>Additional Health and Safety information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>