unpackaged/main/default/objects/Top_Spec__c/fields/Additional_Internal_Contact_information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Internal_Contact_information__c</fullName>
    <inlineHelpText>Please enter any relevant internal contact information here</inlineHelpText>
    <label>Additional Internal Contact information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>