unpackaged/main/default/objects/Top_Spec__c/fields/Additional_Schedule_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Schedule_Info__c</fullName>
    <inlineHelpText>Please enter any additional schedule information here</inlineHelpText>
    <label>Additional Schedule Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>