unpackaged/main/default/objects/Top_Spec__c/fields/Additional_Show_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Show_Info__c</fullName>
    <inlineHelpText>Please enter any useful additional information regarding the show</inlineHelpText>
    <label>Additional Show Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>