unpackaged/main/default/objects/Top_Spec__c/fields/Air_Conditioning__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we offering Air Conditioning as a service?</inlineHelpText>
    <label>Air Conditioning</label>
    <type>Checkbox</type>
</CustomField>