unpackaged/main/default/objects/Top_Spec__c/fields/Air_Conditioning_Cut_off__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioning_Cut_off__c</fullName>
    <inlineHelpText>Please enter the cut off time</inlineHelpText>
    <label>Air Conditioning Cut off</label>
    <type>DateTime</type>
</CustomField>