unpackaged/main/default/objects/Top_Spec__c/fields/AirConditioning_Joint_Contractor_Details__c.field-meta.xml
<CustomField>
    <fullName>AirConditioning_Joint_Contractor_Details__c</fullName>
    <inlineHelpText>Please enter joint contractor details</inlineHelpText>
    <label>Joint Contractor Details</label>
    <type>TextArea</type>
</CustomField>