unpackaged/main/default/objects/Top_Spec__c/fields/Alt_Site_Electrics__c.field-meta.xml
<CustomField>
    <fullName>Alt_Site_Electrics__c</fullName>
    <inlineHelpText>If the person is not a Salesforce user, Please use this text field to enter Electrics Manager/Team Leader</inlineHelpText>
    <label>Alt-Site Electrics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>