unpackaged/main/default/objects/Top_Spec__c/fields/Alt_Site_Health_Safety_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Alt_Site_Health_Safety_Responsibility__c</fullName>
    <inlineHelpText>If the person is not a Salesforce user, Please use this text field to enter Health &amp; Safety Manager/Team Leader</inlineHelpText>
    <label>Alt-Site Health &amp; Safety Responsibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>