unpackaged/main/default/objects/Top_Spec__c/fields/AV_Detail__c.field-meta.xml
<CustomField>
    <fullName>AV_Detail__c</fullName>
    <inlineHelpText>Please enter any additional contracted services information related to AV here. You can also attach visuals by editing the field then clicking on the image icon.</inlineHelpText>
    <label>AV Additional Information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>