unpackaged/main/default/objects/Top_Spec__c/fields/AV_Manager__c.field-meta.xml
<CustomField>
    <fullName>AV_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the AV Manager</inlineHelpText>
    <label>AV Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UsertoTop_SpecsAV</relationshipName>
    <type>Lookup</type>
</CustomField>