unpackaged/main/default/objects/Top_Spec__c/fields/Breakdown_Friday_Close__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Friday_Close__c</fullName>
    <inlineHelpText>Please enter the closing date/time for the Friday breakdown</inlineHelpText>
    <label>Friday End</label>
    <type>DateTime</type>
</CustomField>