unpackaged/main/default/objects/Top_Spec__c/fields/Breakdown_Friday_Open__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Friday_Open__c</fullName>
    <inlineHelpText>Please enter the opening date/time for the Friday breakdown</inlineHelpText>
    <label>Friday Start</label>
    <type>DateTime</type>
</CustomField>