unpackaged/main/default/objects/Top_Spec__c/fields/Breakdown_Monday_Close__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Monday_Close__c</fullName>
    <inlineHelpText>Please enter the closing date/time for the Monday breakdown</inlineHelpText>
    <label>Monday End</label>
    <type>DateTime</type>
</CustomField>