unpackaged/main/default/objects/Top_Spec__c/fields/Breakdown_Monday_Open__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Monday_Open__c</fullName>
    <inlineHelpText>Please enter the opening date/time for the Monday breakdown</inlineHelpText>
    <label>Monday Start</label>
    <type>DateTime</type>
</CustomField>