unpackaged/main/default/objects/Top_Spec__c/fields/Breakdown_Tuesday_Close__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Tuesday_Close__c</fullName>
    <inlineHelpText>Please enter the closing date/time for the Tuesday breakdown</inlineHelpText>
    <label>Tuesday End</label>
    <type>DateTime</type>
</CustomField>