unpackaged/main/default/objects/Top_Spec__c/fields/Breakdown_Tuesday_Open__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Tuesday_Open__c</fullName>
    <inlineHelpText>Please enter the opening date/time for the Tuesday breakdown</inlineHelpText>
    <label>Tuesday Start</label>
    <type>DateTime</type>
</CustomField>