unpackaged/main/default/objects/Top_Spec__c/fields/Breakdown_Wednesday_Close__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Wednesday_Close__c</fullName>
    <inlineHelpText>Please enter the closing date/time for the Wednesday breakdown</inlineHelpText>
    <label>Wednesday End</label>
    <type>DateTime</type>
</CustomField>