unpackaged/main/default/objects/Top_Spec__c/fields/Build_Up_From__c.field-meta.xml
<CustomField>
    <fullName>Build_Up_From__c</fullName>
    <label>Build Up From</label>
    <type>DateTime</type>
</CustomField>