unpackaged/main/default/objects/Top_Spec__c/fields/Build_up_Thursday_to__c.field-meta.xml
<CustomField>
    <fullName>Build_up_Thursday_to__c</fullName>
    <inlineHelpText>Please enter the time build up finishes on the Thursday</inlineHelpText>
    <label>Build up Thursday to</label>
    <type>DateTime</type>
</CustomField>