unpackaged/main/default/objects/Top_Spec__c/fields/Build_up_Wednesday_from__c.field-meta.xml
<CustomField>
    <fullName>Build_up_Wednesday_from__c</fullName>
    <inlineHelpText>Please select the start date and time for Build up on the Wednesday</inlineHelpText>
    <label>Build up Wednesday from</label>
    <type>DateTime</type>
</CustomField>