unpackaged/main/default/objects/Top_Spec__c/fields/CAD_Operator__c.field-meta.xml
<CustomField>
    <fullName>CAD_Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the CAD Operator</inlineHelpText>
    <label>CAD Operator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UsertoTop_SpecsCAD</relationshipName>
    <type>Lookup</type>
</CustomField>