unpackaged/main/default/objects/Top_Spec__c/fields/Carpeted_Venue__c.field-meta.xml
<CustomField>
    <fullName>Carpeted_Venue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this a carpeted venue?</inlineHelpText>
    <label>Carpeted Venue</label>
    <type>Checkbox</type>
</CustomField>