unpackaged/main/default/objects/Top_Spec__c/fields/Compressed_Air_Cut_Off__c.field-meta.xml
<CustomField>
    <fullName>Compressed_Air_Cut_Off__c</fullName>
    <inlineHelpText>Please enter the cut off date</inlineHelpText>
    <label>Compressed Air Cut-Off</label>
    <type>DateTime</type>
</CustomField>