unpackaged/main/default/objects/Top_Spec__c/fields/Compressed_Air_Detail__c.field-meta.xml
<CustomField>
    <fullName>Compressed_Air_Detail__c</fullName>
    <inlineHelpText>Please enter any Compressed Air Detail. You can also attach visuals by editing the field then clicking on the image icon.</inlineHelpText>
    <label>Compressed Air Additional Information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>