unpackaged/main/default/objects/Top_Spec__c/fields/Compressed_Air_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Compressed_Air_Surcharge__c</fullName>
    <inlineHelpText>Please enter the surcharge date</inlineHelpText>
    <label>Compressed Air Surcharge</label>
    <type>Date</type>
</CustomField>