unpackaged/main/default/objects/Top_Spec__c/fields/Conference_Friday_Open__c.field-meta.xml
<CustomField>
    <fullName>Conference_Friday_Open__c</fullName>
    <inlineHelpText>What time does the conference open on Friday?</inlineHelpText>
    <label>Friday Open</label>
    <type>DateTime</type>
</CustomField>