unpackaged/main/default/objects/Top_Spec__c/fields/Conference_Monday_Close__c.field-meta.xml
<CustomField>
    <fullName>Conference_Monday_Close__c</fullName>
    <inlineHelpText>What time does the conference open on Monday?</inlineHelpText>
    <label>Monday Close</label>
    <type>DateTime</type>
</CustomField>