unpackaged/main/default/objects/Top_Spec__c/fields/Conference_Sunday_Close__c.field-meta.xml
<CustomField>
    <fullName>Conference_Sunday_Close__c</fullName>
    <inlineHelpText>What time does the conference close on Sunday?</inlineHelpText>
    <label>Sunday Close</label>
    <type>DateTime</type>
</CustomField>