unpackaged/main/default/objects/Top_Spec__c/fields/Conference_Sunday_Open__c.field-meta.xml
<CustomField>
    <fullName>Conference_Sunday_Open__c</fullName>
    <inlineHelpText>What time does the conference open on Sunday?</inlineHelpText>
    <label>Sunday Open</label>
    <type>DateTime</type>
</CustomField>