unpackaged/main/default/objects/Top_Spec__c/fields/Contacted_Exhibitor_Graphics__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Exhibitor_Graphics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhibitor Graphics</label>
    <type>Checkbox</type>
</CustomField>