unpackaged/main/default/objects/Top_Spec__c/fields/Contracted_Electrics__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Electrics__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we contracted for Electrics</inlineHelpText>
    <label>Electrics</label>
    <type>Checkbox</type>
</CustomField>