unpackaged/main/default/objects/Top_Spec__c/fields/Contracted_Features__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Features__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we contracted for features?</inlineHelpText>
    <label>Features</label>
    <type>Checkbox</type>
</CustomField>