unpackaged/main/default/objects/Top_Spec__c/fields/Contracted_Furniture__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Furniture__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we contracted for Furniture?</inlineHelpText>
    <label>Furniture</label>
    <type>Checkbox</type>
</CustomField>