unpackaged/main/default/objects/Top_Spec__c/fields/Contracted_Hostess__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Hostess__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we contracted for hostess services?</inlineHelpText>
    <label>Hostess</label>
    <type>Checkbox</type>
</CustomField>