unpackaged/main/default/objects/Top_Spec__c/fields/Contracted_Meeting_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Meeting_Rooms__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we contracted for meeting rooms?</inlineHelpText>
    <label>Meeting Rooms</label>
    <type>Checkbox</type>
</CustomField>