unpackaged/main/default/objects/Top_Spec__c/fields/Contracted_Nameboards__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Nameboards__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we contracted for Nameboards?</inlineHelpText>
    <label>Nameboards</label>
    <type>Checkbox</type>
</CustomField>