unpackaged/main/default/objects/Top_Spec__c/fields/Contracted_Online_Manual__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Online_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we contracted for Online Manual?</inlineHelpText>
    <label>Online Manual</label>
    <type>Checkbox</type>
</CustomField>