unpackaged/main/default/objects/Top_Spec__c/fields/Contracted_Pavillion__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Pavillion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we contracted for Pavillion?</inlineHelpText>
    <label>Pavillion</label>
    <type>Checkbox</type>
</CustomField>