unpackaged/main/default/objects/Top_Spec__c/fields/Contracted_Rigging__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Rigging__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we contracted for rigging?</inlineHelpText>
    <label>Rigging</label>
    <type>Checkbox</type>
</CustomField>