unpackaged/main/default/objects/Top_Spec__c/fields/Contracted_Services_Catering__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Services_Catering__c</fullName>
    <inlineHelpText>Please enter any catering related detail. You can also attach visuals by editing the field then clicking on the image icon.</inlineHelpText>
    <label>Catering Additional Information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>