unpackaged/main/default/objects/Top_Spec__c/fields/Contracted_Shell_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Shell_Scheme__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we contracted for Shell Scheme?</inlineHelpText>
    <label>Shell Scheme</label>
    <type>Checkbox</type>
</CustomField>