unpackaged/main/default/objects/Top_Spec__c/fields/Contracted_Shell_Scheme_Extras__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Shell_Scheme_Extras__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we contracted for Shell Scheme Extras?</inlineHelpText>
    <label>Shell Scheme Extras</label>
    <type>Checkbox</type>
</CustomField>