unpackaged/main/default/objects/Top_Spec__c/fields/Contracted_Space_Only_Design_Build__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Space_Only_Design_Build__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Space Only Stands / Design &amp; Build</label>
    <type>Checkbox</type>
</CustomField>