unpackaged/main/default/objects/Top_Spec__c/fields/Contracted_Stand_Approval_Testing__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Stand_Approval_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we contracted for Stand Approval Testing</inlineHelpText>
    <label>Stand Approval Testing</label>
    <type>Checkbox</type>
</CustomField>