unpackaged/main/default/objects/Top_Spec__c/fields/Contracted_Stand_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Stand_Cleaning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we contracted for Stand Cleaning?</inlineHelpText>
    <label>Stand Cleaning</label>
    <type>Checkbox</type>
</CustomField>