unpackaged/main/default/objects/Top_Spec__c/fields/Contracted_Telephone_and_Telefax__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Telephone_and_Telefax__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we contracted for Telephone and Telefax?</inlineHelpText>
    <label>Telephone and Telefax</label>
    <type>Checkbox</type>
</CustomField>