unpackaged/main/default/objects/Top_Spec__c/fields/Credit_Controller__c.field-meta.xml
<CustomField>
    <fullName>Credit_Controller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the credit controller</inlineHelpText>
    <label>Credit Controller</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UsertoTop_SpecsCreditController</relationshipName>
    <type>Lookup</type>
</CustomField>