unpackaged/main/default/objects/Top_Spec__c/fields/Discounts__c.field-meta.xml
<CustomField>
    <fullName>Discounts__c</fullName>
    <inlineHelpText>Please enter any discounts here, this could be copied and pasted from the Agreements</inlineHelpText>
    <label>Discounts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>