unpackaged/main/default/objects/Top_Spec__c/fields/Early_Bird_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Early_Bird_Deadline__c</fullName>
    <inlineHelpText>Please enter the early bird deadline date</inlineHelpText>
    <label>Early Bird Deadline</label>
    <type>Date</type>
</CustomField>