unpackaged/main/default/objects/Top_Spec__c/fields/Electrics_Manager__c.field-meta.xml
<CustomField>
    <fullName>Electrics_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the Electrics Manager</inlineHelpText>
    <label>Electrics Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UsertoTop_SpecsElectricsManager</relationshipName>
    <type>Lookup</type>
</CustomField>