unpackaged/main/default/objects/Top_Spec__c/fields/EMOL_URL__c.field-meta.xml
<CustomField>
    <fullName>EMOL_URL__c</fullName>
    <inlineHelpText>Please enter a valid Exhibitor Manual URL</inlineHelpText>
    <label>Exhibitor Manual URL</label>
    <type>Url</type>
</CustomField>