unpackaged/main/default/objects/Top_Spec__c/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <description>The SOP Event ID</description>
    <inlineHelpText>Holds the SOP Event ID</inlineHelpText>
    <label>Event Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>