unpackaged/main/default/objects/Top_Spec__c/fields/Exhibition_Friday_Open__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Friday_Open__c</fullName>
    <inlineHelpText>What time does the Exhibition open on Friday?</inlineHelpText>
    <label>Friday Open</label>
    <type>DateTime</type>
</CustomField>