unpackaged/main/default/objects/Top_Spec__c/fields/Exhibition_Monday_Close__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Monday_Close__c</fullName>
    <inlineHelpText>What time does the Exhibition close on Monday?</inlineHelpText>
    <label>Monday Close</label>
    <type>DateTime</type>
</CustomField>