unpackaged/main/default/objects/Top_Spec__c/fields/Exhibition_Monday_Open__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Monday_Open__c</fullName>
    <inlineHelpText>What time does the Exhibition open on Monday?</inlineHelpText>
    <label>Monday Open</label>
    <type>DateTime</type>
</CustomField>