unpackaged/main/default/objects/Top_Spec__c/fields/Exhibition_Saturday_Close__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Saturday_Close__c</fullName>
    <inlineHelpText>What time does the Exhibition close on Saturday?</inlineHelpText>
    <label>Saturday Close</label>
    <type>DateTime</type>
</CustomField>