unpackaged/main/default/objects/Top_Spec__c/fields/Exhibition_Thursday_Open__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Thursday_Open__c</fullName>
    <inlineHelpText>What time does the Exhibition open on Thursday?</inlineHelpText>
    <label>Thursday Open</label>
    <type>DateTime</type>
</CustomField>