unpackaged/main/default/objects/Top_Spec__c/fields/Exhibition_Tuesday_Close__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Tuesday_Close__c</fullName>
    <inlineHelpText>What time does the Exhibition close on Tuesday?</inlineHelpText>
    <label>Tuesday Close</label>
    <type>DateTime</type>
</CustomField>