unpackaged/main/default/objects/Top_Spec__c/fields/Exhibitor_Access_End_Space__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Access_End_Space__c</fullName>
    <inlineHelpText>Please enter the end date and time</inlineHelpText>
    <label>Exhibitor Access End - Space</label>
    <type>DateTime</type>
</CustomField>