unpackaged/main/default/objects/Top_Spec__c/fields/Exhibitor_Graphics_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Graphics_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we allowed to market the Exhibitor Graphics?</inlineHelpText>
    <label>Exhibitor Graphics</label>
    <type>Checkbox</type>
</CustomField>