unpackaged/main/default/objects/Top_Spec__c/fields/External_AV_Contact_if_not_appointed__c.field-meta.xml
<CustomField>
    <fullName>External_AV_Contact_if_not_appointed__c</fullName>
    <inlineHelpText>Please enter the name of the external AV contact if we are not appointed.</inlineHelpText>
    <label>AV Contact (if not appointed)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>