unpackaged/main/default/objects/Top_Spec__c/fields/External_Logistics_if_not_appointed__c.field-meta.xml
<CustomField>
    <fullName>External_Logistics_if_not_appointed__c</fullName>
    <inlineHelpText>Please enter the external logistics person, if not appointed.</inlineHelpText>
    <label>Logistics (if not appointed)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>