unpackaged/main/default/objects/Top_Spec__c/fields/External_Venue_Event_Manager__c.field-meta.xml
<CustomField>
    <fullName>External_Venue_Event_Manager__c</fullName>
    <inlineHelpText>Please enter the name of the external venue event manager</inlineHelpText>
    <label>Venue Event Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>