unpackaged/main/default/objects/Top_Spec__c/fields/External_Venue_H_and_S_Manager__c.field-meta.xml
<CustomField>
    <fullName>External_Venue_H_and_S_Manager__c</fullName>
    <inlineHelpText>Please enter the name of the external Venue H&amp;S Manager</inlineHelpText>
    <label>Venue H and S Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>