unpackaged/main/default/objects/Top_Spec__c/fields/Fascia_Infill_Name_Board_Colour__c.field-meta.xml
<CustomField>
    <fullName>Fascia_Infill_Name_Board_Colour__c</fullName>
    <label>Fascia Infill/Name Board Colour</label>
    <type>TextArea</type>
</CustomField>