unpackaged/main/default/objects/Top_Spec__c/fields/Features_Detail__c.field-meta.xml
<CustomField>
    <fullName>Features_Detail__c</fullName>
    <inlineHelpText>Please enter any related features detail. You can also attach visuals by editing the field then clicking on the image icon.</inlineHelpText>
    <label>Features Additional Information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>