unpackaged/main/default/objects/Top_Spec__c/fields/Features_Manager__c.field-meta.xml
<CustomField>
    <fullName>Features_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the features manager</inlineHelpText>
    <label>Features Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UsertoTop_SpecsFeatures</relationshipName>
    <type>Lookup</type>
</CustomField>