unpackaged/main/default/objects/Top_Spec__c/fields/Floor_Covering_Colour_Gangway__c.field-meta.xml
<CustomField>
    <fullName>Floor_Covering_Colour_Gangway__c</fullName>
    <label>Floor Covering Colour  Gangway</label>
    <length>200</length>
    <type>Text</type>
</CustomField>