unpackaged/main/default/objects/Top_Spec__c/fields/Floor_Covering_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Floor_Covering_Type_Other__c</fullName>
    <label>Floor Covering Type Other</label>
    <length>200</length>
    <type>Text</type>
</CustomField>