unpackaged/main/default/objects/Top_Spec__c/fields/FloorCovering_Colour_Code_Shell__c.field-meta.xml
<CustomField>
    <fullName>FloorCovering_Colour_Code_Shell__c</fullName>
    <label>FloorCovering Colour Code - Shell</label>
    <length>200</length>
    <type>Text</type>
</CustomField>