unpackaged/main/default/objects/Top_Spec__c/fields/Floorcovering_Colour_Shell__c.field-meta.xml
<CustomField>
    <fullName>Floorcovering_Colour_Shell__c</fullName>
    <label>Floorcovering Colour Shell</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Floorcovering_Type_Shell__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Beech Vinyl/BV01</fullName>
            </value>
            <value>
                <fullName>Beige/2251</fullName>
            </value>
            <value>
                <fullName>Beige/230</fullName>
            </value>
            <value>
                <fullName>Beige/401</fullName>
            </value>
            <value>
                <fullName>Beige/WC05</fullName>
            </value>
            <value>
                <fullName>Black/1999</fullName>
            </value>
            <value>
                <fullName>Black/810</fullName>
            </value>
            <value>
                <fullName>Black/957</fullName>
            </value>
            <value>
                <fullName>Black/WC08</fullName>
            </value>
            <value>
                <fullName>Black Penny Dot/BPV1</fullName>
            </value>
            <value>
                <fullName>Blue/ET05</fullName>
            </value>
            <value>
                <fullName>Bright Green/722</fullName>
            </value>
            <value>
                <fullName>Bright Green/WC07</fullName>
            </value>
            <value>
                <fullName>Bright Red/WC02</fullName>
            </value>
            <value>
                <fullName>Brown/ET09</fullName>
            </value>
            <value>
                <fullName>Charcoal/ET04</fullName>
            </value>
            <value>
                <fullName>Charcoal/WC06</fullName>
            </value>
            <value>
                <fullName>Coir Matting/CM01</fullName>
            </value>
            <value>
                <fullName>Dark Blue/WC10</fullName>
            </value>
            <value>
                <fullName>Dark Grey/923</fullName>
            </value>
            <value>
                <fullName>Dark Wood Vinyl/BV02</fullName>
            </value>
            <value>
                <fullName>Gold/ET02</fullName>
            </value>
            <value>
                <fullName>Green/629</fullName>
            </value>
            <value>
                <fullName>Green/ET08</fullName>
            </value>
            <value>
                <fullName>Grey/ET06</fullName>
            </value>
            <value>
                <fullName>Grey/WC03</fullName>
            </value>
            <value>
                <fullName>Light Blue/6343</fullName>
            </value>
            <value>
                <fullName>Light Grey/905</fullName>
            </value>
            <value>
                <fullName>Mid Blue/780</fullName>
            </value>
            <value>
                <fullName>Midnight Blue/790</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>