unpackaged/main/default/objects/Top_Spec__c/fields/Floorplan_Cut_off__c.field-meta.xml
<CustomField>
    <fullName>Floorplan_Cut_off__c</fullName>
    <inlineHelpText>Please enter the cut off date</inlineHelpText>
    <label>Floorplan Cut off</label>
    <type>DateTime</type>
</CustomField>