unpackaged/main/default/objects/Top_Spec__c/fields/Floorplan_Detail__c.field-meta.xml
<CustomField>
    <fullName>Floorplan_Detail__c</fullName>
    <inlineHelpText>Please enter any relevant Floorplan detail here. You can also attach visuals by editing the field then clicking on the image icon.</inlineHelpText>
    <label>Floorplan Additional Information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>