unpackaged/main/default/objects/Top_Spec__c/fields/Floorplan_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Floorplan_Surcharge__c</fullName>
    <inlineHelpText>Please enter the surcharge date</inlineHelpText>
    <label>Floorplan Surcharge</label>
    <type>Date</type>
</CustomField>