unpackaged/main/default/objects/Top_Spec__c/fields/Floral_Cut_off__c.field-meta.xml
<CustomField>
    <fullName>Floral_Cut_off__c</fullName>
    <inlineHelpText>Please enter the cut off date</inlineHelpText>
    <label>Floral Cut off</label>
    <type>DateTime</type>
</CustomField>